# rust_shellcode_execution

./: Cargo.toml
bindings/: Cargo.toml  build.rs
src/: main.rs
