[package]
name = "shellcode_execution"
version = "0.1.0"
authors = ["Victor Fordham <victor.b.fordham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
windows = "0.10.0"
libc = "0.2"